Prepare project for cloud deployment